[package]
name = "cw20-i4i-escrow"
version = "0.1.0"
authors = ["Martin Arrivets <arrivets@users.noreply.github.com>"]
edition = "2021"
description = "Implementation of an escrow for p2p transactions"
license = "Apache-2.0"
repository = "https://github.com/arrivets/nride-sc"
homepage = "https://nride.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = "0.13.2"
cw2 = "0.13.2"
cw20 = "0.13.2"
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.2"
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
k256 = { version = "0.11", features = ["ecdsa"] }
hex = "0.4"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }
hex-literal = "0.3.1"